--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tic Tac Toe by sh</title>
-</head>
+  </head>
 
-<body>
-
+  <body onload="init()">
     <script src="script.js"></script>
+    <h1>Tic Tac Toe by sh</h1>
+    <div id="content"></div>
 
-</body>
+    <div class="center">
+      <button onclick="restartGame()">Spiel neu starten</button>
+    </div>
+  </body>
 </html>
